--- a/23FTT1848.md
+++ b/23FTT1848.md
@@ -140,7 +140,7 @@ $git remote set-url origin <URLFROMGITHUB> //this cmd is for if GitHub app is in
 *key thing to note here the remote name is origin. bear that in mind*
 ------------------------
 
-##Push work t remote 
+##Push work to remote 
 ===================
 to push(send) everything what we done just use $git push origin master
 *keynote to take is that "origin" is our current remote name, and "master" is our current branch named
