--- a/23FTT1848.md
+++ b/23FTT1848.md
@@ -7,10 +7,10 @@
 ##Install git
 ==============
 if not sure whether Git is install or not. u can try the command below on your local terminal;
-
+```
  $git --version
-
-below is what u should be expecting to have
+```
+Below is what u should be expecting to have
 
 ```
 PS C:\Users\Vero> git --version
@@ -18,18 +18,22 @@ git version 2.47.1.windows.1
 ```
 
 if Git is not install, go to their official website. Download the file according to ur os system. Open the .exe file to install. Congratulation u have git install 
+
 --------------
 
 ##Configuration of Git
 =======================
 The reason why we need this, is to tell who you are when push or pull so it will be save under the registered name and email 
 
-```
 This is the command for registering
+```
 $git config --global user.name "Your Name"
 $git config --global user.email "youremail@example.com"
 ```
-if wanting to check the current name&email just retype the command but without putting the name and email eg. $git config --global user.email to check the current use email
+if wanting to check the current name & email just retype the command but without putting the name and email eg.
+``` 
+$git config --global user.email //to check the current use email
+```
 below are how u would expect when checking;
 ```
 PS C:\Users\Vero> git config --global user.name
@@ -38,50 +42,59 @@ PS C:\Users\Vero> git config --global user.email
 23FTT1848@student.pb.edu.bn
 ```
 
-**please take note who and what name & email is currently using, this is to ensure future use so it would not clash with other name & email that you are using**
+**Important Note: Please take note who and what name & email is currently using, this is to ensure future use so it would not clash with other name & email that you are using**
+
 -----------------------
 
 ##Create a repository
 ===================== 
 
 make a new folder command 
+```
 $mkdir "name of folder"
-
-opening a folder command 
+```
+opening a folder command
+``` 
 $cd "name of folder"
-
+```
 *important part*
 initialize git in current folder 
+```
 $git init
+```
+*current folder being used is "NetPro-AS01"*
+```
+*u can use "$code ." //to open the current folder with Visual Studio*
+```
 
-*current folder being used is "git-logbook-pratice"*
-*u can use "$code ." to open the current folder with Visual Studio*
 ---------------------
 
 ##Create new file
 ================
-it depend on the user how/where/what they want to create a file, by using Visual Studio app also can. but u can also use the command below to create a file inside of the terminal. 
-$ //dont knwow the cmd 
+it depend on the user how/where/what they want to create a file, by using Visual Studio app also can. but u can also use the command below to create a file inside of the git bash.
+``` 
+$touch filename.md 
+```
+There a lots of ways to delete a file but the esiest one is by 
+```
+$Remove-Item "filename.txt"
+```
+but if you want to delete all file by type u can use it like this 
+```
+$Remove-Item *.txt 
+```
 
-there a lots of ways to delete a file but the esiest one is by $Remove-Item "filename.txt"
-but if you want to delete all file by type u can use it like this $Remove-Item *.txt then it will delete .txt file in the folder. u can use *.md to delete all .md file.
+u also can use *.md to delete all .md file.
 
-*i created 2 file here one md-logbook.md and one txt-logbook.txt file for practice purpose*
 
 ##Check status,add,commit changes
 ================
-it depend on the user how/where/what they want to create a file, by using Visual Studio app also can. but u can also use the command below to create a file inside of the terminal. 
-$
 
-there a lots of ways to delete a file but the esiest one is by $Remove-Item "filename.txt"
-but if you want to delete all file by type u can use it like this $Remove-Item *.txt then it will delete .txt file in the folder. u can use *.md to delete all .md file.
-
-*i created 2 file here one md-logbook.md and one txt-logbook.txt file for practice purpose*
-
-*Check status,add,commit changes*
-==================================
-check status of current folder by using "$git status"
-below are some of the expected outcome since nothing happen yet 
+check status of current folder by using 
+```
+$git status
+```
+Below are some of the expected outcome since nothing happen yet 
 ```
 On branch master
 
@@ -94,58 +107,90 @@ Untracked files:
 
 nothing added to commit but untracked files present (use "git add" to track)
 ```
-saving(add) file to git by "git add filename.txt"
+Saving(add) file to git by
+```
+$git add filename.txt
+``` 
 
-now onto next step 
-
-$git commit -m "Created readme" - this is to committing the changes and leave some message to tell the update
+**Now onto next step** 
+```
+$git commit -m "any message"
+```
+ - This is to committing the changes and leave some message to tell the update
 ```
 [master (root-commit) 9a37f8f] Created a new file
  1 file changed, 0 insertions(+), 0 deletions(-)
  create mode 100644 txt-logbook.txt
 ``` 
+- Above will be the output in the terminal
 
-u can use $git diff to tell the different between before and after if there's any changes in the file pretty straight forward
+*Comparing cmd*
+```
+$git diff
+```
+ - To tell the different between before and after if there's any changes in the file . "Pretty straight forward"
+  
 ------------------------------------
-
-onto the next stage
 
 ##Add GitHub username to git 
 ===========================
-$git config --global user.username <USerNamE> // this cmd can register or change the current user 
-$git config --global user.username //to check the current user
+```
+#This cmd can register or change the current user 
+$git config --global user.username <USerNamE> 
 
-lets not be confuse here above its says user.username and not user.name
-to make it clear; 
+#To check the current user
+$git config --global user.username 
+```
+ - lets not be confuse here above its says user.username and not user.name
+to make it clear;
+``` 
 my user.name = Zaki Harith
 my user.username = ZakiHarith 
-*noting this down is a power move to reduce confusion and conflicts of current used name*
+```
+*Noting this down is a power move to reduce confusion and conflicts of current used name*
 -----------------------------
 
 ##Create remote repository
 =========================
-go to GitHub > repository > create new that match your local file if u have one alredy. that's all. 
+```
+Go to GitHub > repository > create new that match your local file name if u have one alredy. that's all. 
+```
 *u can make repo and a readme.file from the get go , this procedure will omit some of the part for conveniency*
 -------------------------
 
 ##Connect local to remote
 ========================
+```
 go to GitHub > go to repo that u made, click copy url from quick setup.
-URLs = https://github.com/ZakiHarith/git-logbook-pratice.git
-
-$git remote add origin <URLFROMGITHUB> //to add remote origin in our repo
+```
+- note down the urls
+```
+#To add remote origin in our repo
+$git remote add origin <URLFROMGITHUB> 
+```
+- URLs = https://github.com/ZakiHarith/git-logbook-pratice.git
+  
 or 
-$git remote set-url origin <URLFROMGITHUB> //this cmd is for if GitHub app is install on your desktop
-
-*key thing to note here the remote name is origin. bear that in mind*
+```
+#This cmd is for if GitHub app is install on your desktop
+$git remote set-url origin <URLFROMGITHUB> 
+```
+*Key thing to note here: The remote name is "origin" . Bear that in mind*
 ------------------------
 
 ##Push work to remote 
 ===================
-to push(send) everything what we done just use $git push origin master
-*keynote to take is that "origin" is our current remote name, and "master" is our current branch named
+To push(send) everything what we done just use 
+```
+"$git push origin master"
+```
+- *keynote to take is that "origin" is our current remote name, and "master" is our current branch named*
+```
 remote name=origin
-branch name=master*
+branch name=master
+```
+
+This is the expected output from the terminal:
 ```
 PS C:\Users\Vero\git-logbook-pratice> git push origin master
 Enumerating objects: 11, done.
