update on django and table of content

--- a/23FTT1848.md
+++ b/23FTT1848.md
@@ -1,11 +1,34 @@
-##Table of contents
--[git](#*git*)
--[Python](#Python)
--[Django](#Django)
-#*git*
+## Table of Contents
 
-##Install git
-==============
+| Section | Subsection |
+|---------|-------------|
+| **Git** | [Install Git](#install-git) | 
+|         | [Configuration of Git](#configuration-of-git) |
+|         | [Create a Repository](#create-a-repository) |
+|         | [Create New File](#create-new-file) |
+|         | [Check Status, Add, Commit Changes](#check-status-add-commit-changes) |
+|         | [Add GitHub Username to Git](#add-github-username-to-git) |
+|         | [Create Remote Repository](#create-remote-repository) |
+|         | [Connect Local to Remote](#connect-local-to-remote) |
+|         | [Push Work to Remote](#push-work-to-remote) |
+| **Python** | [Python](#python) |
+| **Django** | [Initialising](#initialising) |
+|           | [Installing Django](#installing-django) |
+|           | [Lecture Logs](#lecture-logs) |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 1 - 9 Jan 2025 Morning](#day-1---9-jan-2025-morning) |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 2 - 11 Jan 2025](#day-2---11-jan-2025) |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 3](#day-3) |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 4](#day-4) |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day (don't remember when)](#day-dont-remember-when) |
+|           | [CRUD](#crud) |
+|           | [Self Study](#self-study) |
+
+
+# Git
+
+
+## Install git
+
 if not sure whether Git is install or not. u can try the command below on your local terminal;
 ```
  $git --version
@@ -21,8 +44,8 @@ if Git is not install, go to their official website. Download the file according
 
 --------------
 
-##Configuration of Git
-=======================
+## Configuration of Git
+
 The reason why we need this, is to tell who you are when push or pull so it will be save under the registered name and email 
 
 This is the command for registering
@@ -46,8 +69,8 @@ PS C:\Users\Vero> git config --global user.email
 
 -----------------------
 
-##Create a repository
-===================== 
+## Create a repository
+ 
 
 make a new folder command 
 ```
@@ -69,7 +92,7 @@ $git init
 
 ---------------------
 
-##Create new file
+## Create new file
 ================
 it depend on the user how/where/what they want to create a file, by using Visual Studio app also can. but u can also use the command below to create a file inside of the git bash.
 ``` 
@@ -87,8 +110,8 @@ $Remove-Item *.txt
 u also can use *.md to delete all .md file.
 
 
-##Check status,add,commit changes
-================
+## Check status,add,commit changes
+
 
 check status of current folder by using 
 ```
@@ -132,8 +155,8 @@ $git diff
   
 ------------------------------------
 
-##Add GitHub username to git 
-===========================
+## Add GitHub username to git 
+
 ```
 #This cmd can register or change the current user 
 $git config --global user.username <USerNamE> 
@@ -150,16 +173,16 @@ my user.username = ZakiHarith
 *Noting this down is a power move to reduce confusion and conflicts of current used name*
 -----------------------------
 
-##Create remote repository
-=========================
+## Create remote repository
+
 ```
 Go to GitHub > repository > create new that match your local file name if u have one alredy. that's all. 
 ```
 *u can make repo and a readme.file from the get go , this procedure will omit some of the part for conveniency*
 -------------------------
 
-##Connect local to remote
-========================
+## Connect local to remote
+
 ```
 go to GitHub > go to repo that u made, click copy url from quick setup.
 ```
@@ -178,8 +201,8 @@ $git remote set-url origin <URLFROMGITHUB>
 *Key thing to note here: The remote name is "origin" . Bear that in mind*
 ------------------------
 
-##Push work to remote 
-===================
+## Push work to remote 
+
 To push(send) everything what we done just use 
 ```
 "$git push origin master"
@@ -204,6 +227,308 @@ To https://github.com/ZakiHarith/git-logbook-pratice.git
  * [new branch]      master -> master
 ```
 -------------------
+-----
 
-#Python 
-#Django
+# Python 
+
+---------
+
+
+# Django
+
+
+
+## Initialising 
+
+
+First we need to make a folder so it easier to remember where to put or access whatever project we install in it 
+
+```
+$mkdir filename
+```
+- a cmd to make a folder 
+
+now we go onto the file that we make by using:
+```
+#open a file 
+$cd filename
+
+#go out of file 
+$cd ..
+```
+--------------
+  
+## Installing django 
+
+
+First we can check whether we have Django or not 
+```
+$python -m django --version
+```
+- if a version of django is listed thts mean django is already install if not continue to the next step 
+
+now we make a folder to store django 
+```
+$mkdir djangotutorial
+```
+- here I rename the file as djangotutorial so i know where i put my django stuff incase we install venv(virtual machine) in the same project folder 
+```
+$ls
+```
+- this is to list out what is inside of the current folder 
+-below is some of of the result of using $ls
+```
+ Directory: C:\Users\Vero\djgotest
+
+
+Mode                 LastWriteTime         Length Name
+----                 -------------         ------ ----
+d-----          2/9/2025   9:18 PM                djangotutorial
+```
+
+now run:
+
+```
+$django-admin startproject mysite djangotutorial
+```
+- This will create a mysite project from django 
+
+after opening the djangotutorial folder and $ls below output would be expected  
+```
+ Directory: C:\Users\Vero\djgotest\djangotutorial
+
+
+Mode                 LastWriteTime         Length Name
+----                 -------------         ------ ----
+d-----          2/9/2025   9:19 PM                mysite
+-a----          2/9/2025   9:19 PM            684 manage.py
+```
+--------------------
+
+## Running Django server 
+
+After the step above, run the following cmd:
+
+```
+$ python manage.py runserver
+```
+- this cmd will run django server 
+
+```
+Watching for file changes with StatReloader
+Performing system checks...
+
+System check identified no issues (0 silenced).
+
+You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
+Run 'python manage.py migrate' to apply them.
+February 09, 2025 - 21:19:49
+Django version 5.2.dev20250110073115, using settings 'mysite.settings'
+Starting development server at http://127.0.0.1:8000/
+Quit the server with CTRL-BREAK.
+
+WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
+For more information on production servers see: https://docs.djangoproject.com/en/dev/howto/deployment/
+```
+- this expected output should be meaning the server is running
+
+To closed the server 
+- pessed ctrl+break 
+- if there is no break key on the keyboard press ctrl+c 
+------------------------
+---------
+
+# lecture logs 
+
+
+## Day 1 - 9 Jan 2025 Morning
+
+Install python via MS Store
+to run python in cmd/powershell:
+
+```
+ $python or $py 
+```
+
+below should be the expected result 
+```
+PS C:\Users\Vero> python
+Python 3.11.4 (tags/v3.11.4:d2340ef, Jun  7 2023, 05:45:37) [MSC v.1934 64 bit (AMD64)] on win32
+Type "help", "copyright", "credits" or "license" for more information.
+>>>
+```
+```
+PS C:\Users\Vero> py
+Python 3.13.1 (tags/v3.13.1:0671451, Dec  3 2024, 19:06:28) [MSC v.1942 64 bit (AMD64)] on win32
+Type "help", "copyright", "credits" or "license" for more information.
+>>>
+```
+
+CRUD:
+
+-create
+
+-read
+
+-update
+
+-delete 
+
+## self study ##
+in the first tutorial are using the cmd:'django-admin startproject mysite djangotutorial'
+```
+PS C:\Users\Vero\project> django-admin startproject mysite djangotutorial
+django-admin : The term 'django-admin' is not recognized as the name of a cmdlet, function, script file, or operable
+program. Check the spelling of the name, or if a path was included, verify that the path is correct and try again.
+At line:1 char:1
++ django-admin startproject mysite djangotutorial
++ ~~~~~~~~~~~~
+    + CategoryInfo          : ObjectNotFound: (django-admin:String) [], CommandNotFoundException
+    + FullyQualifiedErrorId : CommandNotFoundException
+```
+instead use an alternative cmd like 'manage.py' or 'python -m django'to replace django-admin if there is a problem.
+reference:https://docs.djangoproject.com/en/5.1/ref/django-admin/ 
+
+entah more reference:
+---
+
+https://docs.djangoproject.com/en/5.1/topics/install/#installing-official-release
+https://docs.djangoproject.com/en/5.1/intro/tutorial01/
+https://docs.djangoproject.com/en/5.1/ref/django-admin/
+https://stackoverflow.com/questions/17769430/command-django-admin-py-startproject-mysite-not-recognized
+https://stackoverflow.com/questions/17836416/add-django-admin-py-path-to-command-line-on-windows-7/17836439#17836439
+https://stackoverflow.com/questions/64633727/how-to-fix-running-scripts-is-disabled-on-this-system
+https://www.google.com/search?client=firefox-b-d&q=ctrl+break+windows
+
+----
+
+## Day 2 - 11 Jan 2025 
+
+
+Notes 
+***IN NANO***
+"^G" is ctrl+G 
+
+"less" is to quick view:
+"less readme.me" 
+
+"cat" is to output:
+"cat readme.me"
+
+what i learnt today:
+
+*1)Create*
+
+*2)Stage*
+
+*3)modified/save*
+
+First to create a readme.md file use cmd "touch readme.md"
+
+"git push" is to post online 
+
+"git pull" is to pull for to get the file from GitHub
+
+-----------------------
+
+## Day 3 
+
+what we learn today 
+
+'git remote add origin<repo location>'
+
+this is to transfer commit 
+
+------------
+
+## Day 4 
+
+***DONT SHARE THE SSH KEY**
+++learning of ssh key or PKI++ 
+ssh key is a key if you dont want to use a password 
+***WARNING THIS SSH KEY IS FOR THIS PC** - "So dont share"
+
+**Steps**
+1st-open terminal
+
+2nd-enter "ssh-key" to generate a ssh key
+
+**important note** For a personal computer just omit it because it is cumbersome it work like a two authenticate as in the ssh key as a password and the passphrase is the 2nd authentication  
+
+++checking if the server is up or not++
+'ping ip (address)'
+- to check if the ip is up 
+
+++To authenticate your server++
+
+'ssh-root2@(nameofserver)'
+
+to open inside of name's server
+
+---------
+
+## Day (dont remember when)
+
+ install Django notes  
+
+++First we make a folder to store Django++
+but before that we need to make a virtual machine first 
+"python -m venv tutorial-env"
+Set-ExecutionPolicy Unretricted -Scope Process
+if the window issues of being restricted run "Set-ExecutionPolicy Unretricted -Scope Process"
+
+tutorial-env\Scripts\activate
+mkdir djangotutorial
+django-admin startproject mysite djangotutorial
+"code ." / this is just to check the file or preview the file 
+
+to run the Django server inside of the folder
+"python manage.py runserver"
+
+after the completion of server now can proceed to polls 
+
+after that run "python manage.py startapp polls"
+//it will create a polls file and so on
+
+now use "code ." to preview all the current file 
+
+NOW the coding part 
+
+open the polls/view.py
+copy paste the code:
+```````````````````````````````````````````````````````````````````````````````````````````````
+from django.http import HttpResponse
+
+
+def index(request):
+    return HttpResponse("Hello, world. You're at the polls index.")
+````````````````````````````````````````````````````````````````````````````````````````````````
+
+open the polls/urls.py 
+copy past the code
+````````````````````````````````````````````````````````````````````````````````````````````````
+from django.urls import path
+
+from . import views
+
+urlpatterns = [
+    path("", views.index, name="index"),
+]
+`````````````````````````````````````````````````````````````````````````````````````````````````
+
+make a mysite/urls.py file 
+copy paste the code:
+``````````````````````````````````````````````````````````````````````````````````````````````````
+from django.contrib import admin
+from django.urls import include, path
+
+urlpatterns = [
+    path("polls/", include("polls.urls")),
+    path("admin/", admin.site.urls),
+]
+```````````````````````````````````````````````````````````````````````````````````````````````````
+
+after that, make sure the server is running and go to "http://localhost:8000/polls/"
+
+---
+-------------
