testing git pull

--- a/23FTT1848.md
+++ b/23FTT1848.md
@@ -86,10 +86,24 @@ initialize git in current folder
 $git init
 ```
 *current folder being used is "NetPro-AS01"*
+
+*u can use:
 ```
-*u can use "$code ." //to open the current folder with Visual Studio*
+ $code . 
+```
+ - to open the current folder with Visual Studio for conveniency
+
+### NANO
+in the real practical we will be using NANO instead of Vs code to edit the file 
+
+GO to window search bar and search for "Git bash" . Then, press enter. make sure u r are on/in the right folder 
+Type the following command to use git bash
+```
+$nano filename
 ```
 
+- Press ctrl+o to save 
+- Press ctrl+x to exit 
 ---------------------
 
 ## Create new file
@@ -227,6 +241,14 @@ To https://github.com/ZakiHarith/git-logbook-pratice.git
  * [new branch]      master -> master
 ```
 -------------------
+
+## Pull work from remoet to desktop
+
+use the following command:
+```
+$ git pull <REMOTENAME> <BRANCHNAME>
+```
+
 -----
 
 # Python 
