--- a/23FTT1848.md
+++ b/23FTT1848.md
@@ -2,6 +2,7 @@
 
 | Section | Subsection |
 |---------|-------------|
+| **Introduction** | [Introduction](#introduction) |
 | **Git** | [Install Git](#install-git) | 
 |         | [Configuration of Git](#configuration-of-git) |
 |         | [Create a Repository](#create-a-repository) |
@@ -11,9 +12,14 @@
 |         | [Create Remote Repository](#create-remote-repository) |
 |         | [Connect Local to Remote](#connect-local-to-remote) |
 |         | [Push Work to Remote](#push-work-to-remote) |
-| **Python** | [Python](#python) |
+|         | [Pull Work from Remote to Desktop](#pull-work-from-remote-to-desktop) |
+|         | [Creating Branch](#creating-branch) |
+| **Python** | [Downloading Python](#downloading-python) |
+|           | [Installing Python](#installing-python) |
+|           | [Verify Python](#verify-python) |
 | **Django** | [Initialising](#initialising) |
 |           | [Installing Django](#installing-django) |
+|           | [Running Django Server](#running-django-server) |
 |           | [Lecture Logs](#lecture-logs) |
 |           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 1 - 9 Jan 2025 Morning](#day-1---9-jan-2025-morning) |
 |           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 2 - 11 Jan 2025](#day-2---11-jan-2025) |
@@ -22,6 +28,13 @@
 |           | &nbsp;&nbsp;&nbsp;&nbsp;[Day (don't remember when)](#day-dont-remember-when) |
 |           | [CRUD](#crud) |
 |           | [Self Study](#self-study) |
+
+
+# INTRODUCTION
+
+**This is the compilation of logs of what I have done althougt not all are being put here as I forget to take notes on how I configure and troubleshoot especially in the Django section and this log is not perfect as I may forget to put some detail or steps**
+
+--------------
 
 
 # Git
@@ -107,7 +120,7 @@ $nano filename
 ---------------------
 
 ## Create new file
-================
+
 it depend on the user how/where/what they want to create a file, by using Visual Studio app also can. but u can also use the command below to create a file inside of the git bash.
 ``` 
 $touch filename.md 
@@ -166,7 +179,48 @@ $git commit -m "any message"
 $git diff
 ```
  - To tell the different between before and after if there's any changes in the file . "Pretty straight forward"
-  
+
+```
+$ git log 
+```
+- git log is used to show the history of commits 
+- press "q" key to exit git log 
+
+```
+PS C:\Users\Vero\NetPro-AS01> git log
+commit 8f9b3174b26d1572c89493d70db2e346e12a9d9d (HEAD -> master, origin/master)
+Author: Zaki Harith <23FTT1848@student.pb.edu.bn>
+Date:   Mon Feb 10 16:15:27 2025 +0800
+
+    testing git pull
+
+commit d91d2446ff314900fed71fdb5be388a800620335
+Author: Zaki Harith <23FTT1848@student.pb.edu.bn>
+Date:   Sun Feb 9 23:10:16 2025 +0800
+
+    update on django and table of content
+
+commit ee7d618a5fe84548c1b947f355749c243ce1ac53
+Author: Zaki Harith <23FTT1848@student.pb.edu.bn>
+Date:   Sat Feb 8 09:49:11 2025 +0800
+
+    designing update
+
+commit a208072fa5b7a6685fb6147993843b2251bf0697
+Author: Zaki Harith <23FTT1848@student.pb.edu.bn>
+Date:   Sat Feb 8 08:42:30 2025 +0800
+
+    original phase
+
+commit a0bcb95814394906c3f26ec5d163f7d9da40b800
+Author: Zaki Harith <23FTT1848@student.pb.edu.bn>
+Date:   Sat Feb 8 08:39:28 2025 +0800
+
+    first/initialise phase
+:
+```
+- this is how it look like when executing the cmd 
+
 ------------------------------------
 
 ## Add GitHub username to git 
@@ -242,16 +296,98 @@ To https://github.com/ZakiHarith/git-logbook-pratice.git
 ```
 -------------------
 
-## Pull work from remoet to desktop
+## Pull work from remote to desktop
 
-use the following command:
+use the following command: "git pull REMOTENAME BRANCHNAME"
+- remote name=origin
+- branch name=master
+
 ```
-$ git pull <REMOTENAME> <BRANCHNAME>
+$ git pull origin master
 ```
+```
+PS C:\Users\Vero\NetPro-AS01> git pull origin master
+From https://github.com/ZakiHarith/NetPro-AS01
+ * branch            master     -> FETCH_HEAD
+Already up to date.
+```
+- this is the expected output 
+
+
+## Creating Branch 
+
+```
+$ git branch <BRANCHNAME>
+```
+- this is how t create a branch
+
+```
+$ git branch -m <NEWBRANCHNAME>
+```
+- this is the cmd to rename the BRANCHNAME
+
+```
+$ git checkout <BRANCHNAME>
+```
+- this code is to move onto the branch
+
+```
+$ git branch
+```
+- this is to list out the branches 
+
+```
+$ git checkout -b <BRANCHNAME>
+```
+- this cmd is to create and move onto the branchname (shortcut for create and move)
+
+```
+$ git status
+```
+- git status can also be used to verify the current branchame 
 
 -----
 
 # Python 
+
+## Downloading python 
+
+First go to the official website and go to the dowload section and download latest window version/ installer
+- here is the download urls: https://www.python.org/downloads/windows/
+
+*IMPORTANT Notes:*
+Download the window installer version rather than downloading and installing from microsoft store. Microsoft store python have several issues as example limited function,PATH issues, sanbox limitation ,outdated and so on
+
+- reference : https://www.google.com/search?client=firefox-b-d&q=why+it+is+bad+to+install+python+from+microsoft+store
+
+----------------------
+
+## Installing python 
+
+Once finish downloading the file, run and open the window installer. This will go to the instalation procedure. 
+
+---------------------
+
+## Verify python 
+
+After done instalation you should verify python is install or not, a quick method to verify is to check the python version by:
+
+```
+#cmd for python microsoft version on my desktop
+$python --version 
+#cmd for official python version on my desktop
+$py --version 
+```
+
+```
+PS C:\Users\Vero> python --version
+Python 3.11.4
+PS C:\Users\Vero>
+PS C:\Users\Vero> py --version
+Python 3.13.2
+PS C:\Users\Vero>
+```
+- if the version is showing thts mean the python is installed 
 
 ---------
 
@@ -361,10 +497,11 @@ To closed the server
 ---------
 
 # lecture logs 
-
+*A raw notes on notepade without any edits*
 
 ## Day 1 - 9 Jan 2025 Morning
-
++key highlights+
+- on the first day we have been given tutorial on downloading and installing python,git and Django by Sir Bahit Hamid
 Install python via MS Store
 to run python in cmd/powershell:
 
