Fixing typo for installation

--- a/23FTT1848.md
+++ b/23FTT1848.md
@@ -364,13 +364,13 @@ Download the window installer version rather than downloading and installing fro
 
 ## Installing python 
 
-Once finish downloading the file, run and open the window installer. This will go to the instalation procedure. 
+Once finish downloading the file, run and open the window installer. This will go to the installation procedure. 
 
 ---------------------
 
 ## Verify python 
 
-After done instalation you should verify python is install or not, a quick method to verify is to check the python version by:
+After done installation you should verify python is install or not, a quick method to verify is to check the python version by:
 
 ```
 #cmd for python microsoft version on my desktop
