--- a/23FTT1848.md
+++ b/23FTT1848.md
@@ -1,46 +1,45 @@
 ## Table of Contents
 
-| Section | Subsection |
-|---------|-------------|
-| **Introduction** | [Introduction](#introduction) |
-| **Git** | [Install Git](#install-git) | 
-|         | [Configuration of Git](#configuration-of-git) |
-|         | [Create a Repository](#create-a-repository) |
-|         | [Create New File](#create-new-file) |
-|         | [Check Status, Add, Commit Changes](#check-status-add-commit-changes) |
-|         | [Add GitHub Username to Git](#add-github-username-to-git) |
-|         | [Create Remote Repository](#create-remote-repository) |
-|         | [Connect Local to Remote](#connect-local-to-remote) |
-|         | [Push Work to Remote](#push-work-to-remote) |
-|         | [Pull Work from Remote to Desktop](#pull-work-from-remote-to-desktop) |
-|         | [Creating Branch](#creating-branch) |
-| **Python** | [Downloading Python](#downloading-python) |
-|           | [Installing Python](#installing-python) |
-|           | [Verify Python](#verify-python) |
-| **Django** | [Initialising](#initialising) |
-|           | [Installing Django](#installing-django) |
-|           | [Running Django Server](#running-django-server) |
-|           | [Lecture Logs](#lecture-logs) |
-|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 1 - 9 Jan 2025 Morning](#day-1---9-jan-2025-morning) |
-|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 2 - 11 Jan 2025](#day-2---11-jan-2025) |
-|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 3](#day-3) |
-|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 4](#day-4) |
-|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day (don't remember when)](#day-dont-remember-when) |
-|           | [CRUD](#crud) |
-|           | [Self Study](#self-study) |
+| Section | Subsection | Date |
+|---------|-------------|------|
+| **Introduction** | [Introduction](#introduction) | 10 Feb 2025 |
+| **Git** | [Install Git](#install-git) | 09 Jan 2025 |
+|         | [Configuration of Git](#configuration-of-git) | 03 Feb 2025 |
+|         | [Create a Repository](#create-a-repository) | 03 Feb 2025 |
+|         | [Create New File](#create-new-file) | 09 Jan 2025 |
+|         | [Check Status, Add, Commit Changes](#check-status-add-commit-changes) | 03 Feb 2025 |
+|         | [Add GitHub Username to Git](#add-github-username-to-git) | 03 Feb 2025 |
+|         | [Create Remote Repository](#create-remote-repository) | 03 Feb 2025 |
+|         | [Connect Local to Remote](#connect-local-to-remote) | 03 Feb 2025 |
+|         | [Push Work to Remote](#push-work-to-remote) | 03 Feb 2025 |
+|         | [Pull Work from Remote to Desktop](#pull-work-from-remote-to-desktop) | 03 Feb 2025 |
+|         | [Creating Branch](#creating-branch) | 03 Feb 2025 |
+| **Python** | [Downloading Python](#downloading-python) | 09 Jan 2025 |
+|           | [Installing Python](#installing-python) | 09 Jan 2025 |
+|           | [Verify Python](#verify-python) | 09 Jan 2025 |
+| **Django** | [Initialising](#initialising) | 09 Jan 2025 |
+|           | [Installing Django](#installing-django) | 10 Jan 2025 |
+|           | [Running Django Server](#running-django-server) | 10 Jan 2025 |
+|           | [Lecture Logs](#lecture-logs) | |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 1 - 9 Jan 2025 Morning](#day-1---9-jan-2025-morning) | 9 Jan 2025 |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 2 - 11 Jan 2025](#day-2---11-jan-2025) | 11 Jan 2025 |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 3](#day-3) | 16 Jan 2025 |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day 4](#day-4) | 18 Jan 2025 |
+|           | &nbsp;&nbsp;&nbsp;&nbsp;[Day (don't remember when)](#day-dont-remember-when) | 30 Jan 2025 |
+|           | [Self Study](#self-study) | 10 Jan 2025 |
 
 
-# INTRODUCTION
+# INTRODUCTION - 10/02/2025
 
 **This is the compilation of logs of what I have done althougt not all are being put here as I forget to take notes on how I configure and troubleshoot especially in the Django section and this log is not perfect as I may forget to put some detail or steps**
 
 --------------
 
 
-# Git
+# Git - [09/012025 - 03/02/2025] 
 
 
-## Install git
+## Install git - 09/01/2025
 
 if not sure whether Git is install or not. u can try the command below on your local terminal;
 ```
@@ -57,7 +56,7 @@ if Git is not install, go to their official website. Download the file according
 
 --------------
 
-## Configuration of Git
+## Configuration of Git - 03/02/2025
 
 The reason why we need this, is to tell who you are when push or pull so it will be save under the registered name and email 
 
@@ -82,7 +81,7 @@ PS C:\Users\Vero> git config --global user.email
 
 -----------------------
 
-## Create a repository
+## Create a repository - 03/02/2025
  
 
 make a new folder command 
@@ -106,7 +105,8 @@ $git init
 ```
  - to open the current folder with Visual Studio for conveniency
 
-### NANO
+### NANO - 11/01/2025 
+
 in the real practical we will be using NANO instead of Vs code to edit the file 
 
 GO to window search bar and search for "Git bash" . Then, press enter. make sure u r are on/in the right folder 
@@ -119,7 +119,8 @@ $nano filename
 - Press ctrl+x to exit 
 ---------------------
 
-## Create new file
+## Create new file - 09/01/2025
+
 
 it depend on the user how/where/what they want to create a file, by using Visual Studio app also can. but u can also use the command below to create a file inside of the git bash.
 ``` 
@@ -137,7 +138,7 @@ $Remove-Item *.txt
 u also can use *.md to delete all .md file.
 
 
-## Check status,add,commit changes
+## Check status,add,commit changes - 03/02/2025
 
 
 check status of current folder by using 
@@ -223,7 +224,7 @@ Date:   Sat Feb 8 08:39:28 2025 +0800
 
 ------------------------------------
 
-## Add GitHub username to git 
+## Add GitHub username to git - 03/02/2025
 
 ```
 #This cmd can register or change the current user 
@@ -241,7 +242,7 @@ my user.username = ZakiHarith
 *Noting this down is a power move to reduce confusion and conflicts of current used name*
 -----------------------------
 
-## Create remote repository
+## Create remote repository - 03/02/2025
 
 ```
 Go to GitHub > repository > create new that match your local file name if u have one alredy. that's all. 
@@ -249,7 +250,7 @@ Go to GitHub > repository > create new that match your local file name if u have
 *u can make repo and a readme.file from the get go , this procedure will omit some of the part for conveniency*
 -------------------------
 
-## Connect local to remote
+## Connect local to remote -03/02/2025
 
 ```
 go to GitHub > go to repo that u made, click copy url from quick setup.
@@ -269,7 +270,7 @@ $git remote set-url origin <URLFROMGITHUB>
 *Key thing to note here: The remote name is "origin" . Bear that in mind*
 ------------------------
 
-## Push work to remote 
+## Push work to remote - 03/02/2025
 
 To push(send) everything what we done just use 
 ```
@@ -296,7 +297,7 @@ To https://github.com/ZakiHarith/git-logbook-pratice.git
 ```
 -------------------
 
-## Pull work from remote to desktop
+## Pull work from remote to desktop - 03/02/2025
 
 use the following command: "git pull REMOTENAME BRANCHNAME"
 - remote name=origin
@@ -314,7 +315,7 @@ Already up to date.
 - this is the expected output 
 
 
-## Creating Branch 
+## Creating Branch - 03/02/2025
 
 ```
 $ git branch <BRANCHNAME>
@@ -348,9 +349,9 @@ $ git status
 
 -----
 
-# Python 
+# Python [09/01/2025]
 
-## Downloading python 
+## Downloading python - 09/01/2025
 
 First go to the official website and go to the dowload section and download latest window version/ installer
 - here is the download urls: https://www.python.org/downloads/windows/
@@ -362,13 +363,13 @@ Download the window installer version rather than downloading and installing fro
 
 ----------------------
 
-## Installing python 
+## Installing python - 09/01/2025
 
 Once finish downloading the file, run and open the window installer. This will go to the installation procedure. 
 
 ---------------------
 
-## Verify python 
+## Verify python - 09/01/2025
 
 After done installation you should verify python is install or not, a quick method to verify is to check the python version by:
 
@@ -392,11 +393,11 @@ PS C:\Users\Vero>
 ---------
 
 
-# Django
+# Django [09/01/2025 - 10/01/2025]
 
 
 
-## Initialising 
+## Initialising - 09/01/2025
 
 
 First we need to make a folder so it easier to remember where to put or access whatever project we install in it 
@@ -416,7 +417,7 @@ $cd ..
 ```
 --------------
   
-## Installing django 
+## Installing django -10/01/2025
 
 
 First we can check whether we have Django or not 
@@ -463,7 +464,7 @@ d-----          2/9/2025   9:19 PM                mysite
 ```
 --------------------
 
-## Running Django server 
+## Running Django server -10/01/2025
 
 After the step above, run the following cmd:
 
@@ -523,17 +524,9 @@ Type "help", "copyright", "credits" or "license" for more information.
 >>>
 ```
 
-CRUD:
+CRUD: create,read,update,delete 
 
--create
-
--read
-
--update
-
--delete 
-
-## self study ##
+## self study - 10/01/2025
 in the first tutorial are using the cmd:'django-admin startproject mysite djangotutorial'
 ```
 PS C:\Users\Vero\project> django-admin startproject mysite djangotutorial
@@ -590,7 +583,7 @@ First to create a readme.md file use cmd "touch readme.md"
 
 -----------------------
 
-## Day 3 
+## Day 3 - 16/01/2025
 
 what we learn today 
 
@@ -600,7 +593,7 @@ this is to transfer commit
 
 ------------
 
-## Day 4 
+## Day 4 - 18/01/2025
 
 ***DONT SHARE THE SSH KEY**
 ++learning of ssh key or PKI++ 
@@ -626,7 +619,7 @@ to open inside of name's server
 
 ---------
 
-## Day (dont remember when)
+## Day (dont remember when) - 30/01/2025
 
  install Django notes  
 
